# ChangeLog for dev-db/tokyocabinet
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/tokyocabinet/ChangeLog,v 1.31 2011/01/13 17:52:46 ranger Exp $

  13 Jan 2011; Brent Baude <ranger@gentoo.org> tokyocabinet-1.4.46.ebuild:
  stable ppc, bug 346661

  22 Dec 2010; Tobias Klausmann <klausman@gentoo.org>
  tokyocabinet-1.4.46.ebuild:
  Stable on alpha, bug #346661

  26 Nov 2010; Jeroen Roovers <jer@gentoo.org> tokyocabinet-1.4.46.ebuild:
  Stable for HPPA (bug #346661).

  13 Sep 2010; Markos Chandras <hwoarang@gentoo.org>
  tokyocabinet-1.4.46.ebuild:
  Stable on amd64 wrt bug #335043

  12 Sep 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  tokyocabinet-1.4.46.ebuild:
  x86 stable wrt bug #335043

*tokyocabinet-1.4.46 (13 Aug 2010)

  13 Aug 2010; Patrick Lauer <patrick@gentoo.org> +files/1.4.46.patch,
  +tokyocabinet-1.4.46.ebuild, +files/remove_docinst.patch:
  Bump, lots of nice fixes by Johan Bergstroem, fixes #331555

*tokyocabinet-1.4.45 (02 Jun 2010)

  02 Jun 2010; Patrick Lauer <patrick@gentoo.org> -files/1.4.43.patch,
  -tokyocabinet-1.4.44.ebuild, -files/1.4.44.patch,
  +tokyocabinet-1.4.45.ebuild, +files/1.4.45.patch,
  -tokyocabinet-1.4.43.ebuild:
  Bump, fixes #321171, thanks to Johan Bergstroem

  03 May 2010; Patrick Lauer <patrick@gentoo.org>
  tokyocabinet-1.4.44.ebuild:
  Fixing configure for #314743

*tokyocabinet-1.4.44 (03 May 2010)

  03 May 2010; Patrick Lauer <patrick@gentoo.org> +files/1.4.44.patch,
  +tokyocabinet-1.4.44.ebuild:
  Bump to 1.4.44

*tokyocabinet-1.4.43 (17 Mar 2010)

  17 Mar 2010; Patrick Lauer <patrick@gentoo.org> +files/1.4.43.patch,
  +tokyocabinet-1.4.43.ebuild:
  Bump, small patch for sandbox violation thanks to jbergstroem

  01 Feb 2010; Markus Meier <maekke@gentoo.org> tokyocabinet-1.4.41.ebuild:
  amd64 stable, bug #290660

*tokyocabinet-1.4.42 (22 Jan 2010)

  22 Jan 2010; Jeroen Roovers <jer@gentoo.org> +tokyocabinet-1.4.42.ebuild:
  Version bump.
