@@ -2,15 +2,15 @@ AUX 1.4.45.patch 437 RMD160 9c33d524bcd66ab62e7027a19d9af3209237d9d3 SHA1 ab6aec
 AUX 1.4.46.patch 480 RMD160 c265a43e9641af15cf4c2f1a4389278b4db51a46 SHA1 c7b9dcb5db8ab8083e3fb901d1d6414a3e78e469 SHA256 bd9d9f29ab05a056817c8dfae4be2c4728fd1ccbcf682f35e50dc15acd3f1d88
 AUX fix_rpath.patch 2111 RMD160 ef1878e4519d3e056847b6bb98069d343987d737 SHA1 4bc2679a8fd544ae2275f1113f5096d540987ae9 SHA256 cba364650da90d9fcae3424a1e6ce400769db193c863e5cdbf29a4ced0292ce6
 AUX remove_docinst.patch 456 RMD160 08df40c4b6c75de71d724151eb04b68d9cace9d0 SHA1 469c681469ec822b7d9eef01854b0e8689a52d2b SHA256 5e4d8a11a7bd6422e0fe7d5bb307e8a7dee5a05c9a6fea15d3ea81707626f4d9
-DIST tokyocabinet-1.4.38.tar.gz 989170 RMD160 959e6c9cebf14ae8477cfdfb4f47f0b4edc7433b SHA1 7eee413bfd08751a50943637352981c13681c6ed SHA256 689bedf38afea507ece2a997c65bac5121921c29683fa5e1a7841cd52b249574
 DIST tokyocabinet-1.4.41.tar.gz 991669 RMD160 104f3e3c83caf7f510a64537e8815a7e41fd8e24 SHA1 aefd98f86cd86141254978574e10ca58228902a6 SHA256 567bd9a05608474776a44849fca866fbbc0de69278531af5c9332c7bb6c24391
 DIST tokyocabinet-1.4.42.tar.gz 989905 RMD160 8c39190d7cc8b379a6d69bbe58e07f3760c28744 SHA1 e46da0ef614f821b57564639cf15388df1c39fb5 SHA256 9936eefe9f410686af77c24dfefe69e7ab9a50cbd3668b1fca3ea0859b0f6e05
 DIST tokyocabinet-1.4.45.tar.gz 995916 RMD160 305cfedaa9d36ab94df8c5cb4783c0408079ade0 SHA1 71b119818ef04dd97ba06bac27cdafaf6d7cce41 SHA256 ef6a5d44bb876db9eb5f65128d995f6227d05dfd1166e0e32cb59d77c605b15d
 DIST tokyocabinet-1.4.46.tar.gz 1002423 RMD160 8e7451bcec30e1a432f6d9fea70c2e39027781f8 SHA1 031569d1eb181584ce4a96c4951341e6b29be8c8 SHA256 0eaaa3305cb67bd0555d228b28d842db6c6dc928dced9ad852980d82a7d933a3
-EBUILD tokyocabinet-1.4.38.ebuild 988 RMD160 e8bd5253efe7847e0a00d08a19fe60c3fb5a6c30 SHA1 599384c864011d2cbd67037828163876a07f5d20 SHA256 e5fc665455c9280eae5910cdcbfdeae71da8ced72ba674b30e70ad3e220633e5
+DIST tokyocabinet-1.4.47.tar.gz 1002443 RMD160 50c6ca7d1c24ebe5b59c84a5ae46f8949258d3d7 SHA1 18608ac2e6e469e20d1c36ae1117661bb47901c4 SHA256 a456193bac4843c0f0caa877b828c8d99dc44495511df10e1b00acf81c538594
 EBUILD tokyocabinet-1.4.41.ebuild 992 RMD160 e41b78b1a962280785b002e95bbcfe12864093ef SHA1 abde2407f5df28d0a5dd0bc56a47b400220b1a13 SHA256 a505e40c30e1457c358c6eb8e209fad4305138756120044898cb0154ac19c80b
 EBUILD tokyocabinet-1.4.42.ebuild 993 RMD160 6458c0d61b4058533438246eb3ff603b73f41367 SHA1 cef38459681dcb646a7a625cf7c383625e2c822b SHA256 91c8b7224833634be053e48f1e872aa41afa5b4994c25e9545b0cd7db4517176
 EBUILD tokyocabinet-1.4.45.ebuild 1046 RMD160 44c9f7c8be3ffdc011925b2132aacd162a01ae85 SHA1 6d582297f16c5e97dbfefc0f597cf368600bcb7d SHA256 380681e71bc94d8200fcf645b1a09baf246d3ef49567574cee568c10cf0885df
 EBUILD tokyocabinet-1.4.46.ebuild 1155 RMD160 e6b3517747e9910d6c8e688ec4a915e51ebc37f8 SHA1 694c20de51b60a79651ca9250ed2167884e45cb3 SHA256 7da02bdb945b63ef60aad55789df5c58beee294a30ce512420d97ed0e0d04ae8
-MISC ChangeLog 4674 RMD160 728c1e1f13198504f0f67d2b1aeaee51146b89dd SHA1 f1648bb950ad7a1b0ae17c9707881d6f6a687456 SHA256 e329f96db646160235696872844fb6f6c92b29ec83b369831d2bf84ddfe522ea
+EBUILD tokyocabinet-1.4.47.ebuild 1152 RMD160 9c0249d80dcdb9375ee330116e01ed054bea083a SHA1 b0bbc8f6fa24b984a5eeef452d8100c179f341ee SHA256 2e2f0c46b28e0f83cd2780c1b56efbe3511f2f6385f00069fdf4f9f96d84413a
+MISC ChangeLog 4841 RMD160 7f9a1eb3e35557c26aad93fb1b95b4f3f6fafbe7 SHA1 ff14ea65949bf57cd21a08d01dee25279f1e0221 SHA256 c1fc01f18787a1d07cb0b55c45d6efa0e3a582cba67ad5520b75c9e917ba438d
 MISC metadata.xml 255 RMD160 dbe77cd804a4411e8445c05f6e632fdc2f72d082 SHA1 94e7a8d2d43907279488b984c3dcd9fd1888ce25 SHA256 28c7b0445a5f2eb0d524ff3afcef712ecbf345592d26142f71a3ef9bca653d4b
