@@ -1,0 +1,49 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-db/tokyocabinet/tokyocabinet-1.4.47.ebuild,v 1.1 2011/02/12 08:58:23 patrick Exp $
+
+EAPI="2"
+
+inherit eutils
+
+DESCRIPTION="A library of routines for managing a database"
+HOMEPAGE="http://fallabs.com/tokyocabinet/"
+SRC_URI="${HOMEPAGE}${P}.tar.gz"
+
+LICENSE="LGPL-2.1"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~hppa ~ppc ~ppc64 ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~x64-solaris"
+IUSE="debug doc examples"
+
+DEPEND="sys-libs/zlib
+	app-arch/bzip2"
+RDEPEND="${DEPEND}"
+
+src_prepare() {
+	epatch "${FILESDIR}/fix_rpath.patch"
+	sed -i \
+		-e "/ldconfig/d" \
+		-e "/DATADIR/d" Makefile.in || die
+}
+
+src_configure() {
+	econf $(use_enable debug) --enable-off64
+}
+
+src_install() {
+	emake DESTDIR="${D}" install || die "Install failed"
+
+	if use examples; then
+		insinto /usr/share/${PF}/example
+		doins example/* || die "Install failed"
+	fi
+
+	if use doc; then
+		insinto /usr/share/doc/${PF}
+		doins -r doc/* || die "Install failed"
+	fi
+}
+
+src_test() {
+	emake -j1 check || die "Tests failed"
+}
