@@ -1,6 +1,12 @@
 # ChangeLog for dev-db/tokyocabinet
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/tokyocabinet/ChangeLog,v 1.31 2011/01/13 17:52:46 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/tokyocabinet/ChangeLog,v 1.32 2011/02/12 08:58:23 patrick Exp $
+
+*tokyocabinet-1.4.47 (12 Feb 2011)
+
+  12 Feb 2011; Patrick Lauer <patrick@gentoo.org> -tokyocabinet-1.4.38.ebuild,
+  +tokyocabinet-1.4.47.ebuild:
+  Bump for #354583
 
   13 Jan 2011; Brent Baude <ranger@gentoo.org> tokyocabinet-1.4.46.ebuild:
   stable ppc, bug 346661
